--- a/test_app/pubspec.yaml
+++ b/test_app/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   http: ^1.2.0
+  shared_preferences: ^2.2.2
+  flutter_markdown: ^0.6.18
 
 dev_dependencies:
   flutter_test:
